--- a/v2025/suspect1.html
+++ b/v2025/suspect1.html
@@ -160,12 +160,12 @@
     </p>
     <p>
       Il écrivait souvent ce mot au tableau lorsqu’il voulait que ses élèves ouvrent les yeux… 
-      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+       <span style="display:inline-block; font-size:2rem; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
         1. déclic
       </span>, disait-il. Peut-être est-ce une piste...Il vaut mieux garder ceci pour plus tard!
     </p>
      <a href="./suspects.html" onclick="localStorage.setItem('suspect1','done')" target="_blank" class="btn">
-    Accéder à d'autre suspect
+    Valider l'enquête sur ce suspect
   </a>
   </div>
 
