--- a/v2025/suspect3.html
+++ b/v2025/suspect3.html
@@ -52,6 +52,7 @@
     <p><strong>Nom :</strong> Tivolepa</p>
     <p><strong>Prénom :</strong> Jean</p>
     <p><strong>Âge :</strong> 42 ans</p>
+    <p><strong>telephone :</strong> 06 16 50 91 19</p>
     <p><strong>Profession :</strong> Professeur de Musique</p>
     <p><strong>Particularités :</strong>Enseignant discret mais passionné, il aurait été vu à plusieurs endroits suspects dans le parc, fredonnant des airs de musique étranges...  
     Certains élèves l’ont trouvé bizarrement nerveux ces derniers temps, et des indices semblent avoir été laissés par inadvertance. </p>
@@ -132,11 +133,20 @@
     <h2>Enigme 2 Résolu</h2>
     <h2>Enigme 3 Résolu</h2>
     <h2>Enigme 4 Résolu</h2>
-    <h2>Énigme 5 - Les Moutons</h2>
+    <h2>Énigme 5</h2>
     <p>
-      À côté d’un massif de fleurs, une décoration représentant une abeille a attiré l’attention de plusieurs témoins.  
-      Coïncidence ou message laissé volontairement ?
+      En approchant de cette étrange sculpture végétale, un élève passionné de musique s’est exclamé :
+      « On dirait que ça va commencer à bourdonner comme dans ce morceau infernal que le prof jouait au piano… tu sais, celui où ses doigts allaient à toute vitesse ! »
     </p>
+    <p>
+      Sur la partition posée dans sa salle, un seul mot était entouré en rouge : bourdon.
+      Un indice ? Ou une obsession musicale ?
+    </p>
+    <p>
+      🔍 Retrouvez le nom du compositeur de ce morceau endiablé. C’est lui qu’il faut inscrire pour valider cette énigme.
+    </p>
+      <img src="../img/abeille2.jpg" alt="Énigme" style="display:block; width:100%; max-width:600px; margin:20px auto; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
+
        <iframe src="https://lockee.fr/o/09as9zdt?nobg&noft&top&light"></iframe>
    
   </div>
@@ -153,7 +163,7 @@
     </p>
     <p>
        Dans ses carnets de partitions, un mot revenait sans cesse, entouré, surligné :
-      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+       <span style="display:inline-block; font-size:2rem; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
         2. raconter
       </span>
       Comme si tout ce qu’il faisait n’était qu’un moyen de raconter quelque chose. Peut-être est-ce une piste...Il vaut mieux garder ceci pour plus tard!
