--- a/v2025/suspect4.html
+++ b/v2025/suspect4.html
@@ -123,7 +123,7 @@
     </p>
     <p>
        Ces mots ne sont pas laissés au hasard. Réunis, ils vous mèneront quelque part. Essayez de les entrer sur le site
-      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+       <span style="display:inline-block; font-size:2rem; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
         -  what3words.com -
       </span>
       Trois mots, une seule destination…Peut etre nous aurons plus d'informations avec les autres suspects?
