--- a/v2025/suspect3.html
+++ b/v2025/suspect3.html
@@ -18,11 +18,19 @@
     }
     .btn {
       display: inline-block;
-      padding: 10px 20px;
-      background: #4CAF50;
+      padding: 18px 28px;
+      font-size: 3rem;
+      background-color: #4CAF50;
       color: white;
       text-decoration: none;
-      border-radius: 10px;
+      border: none;
+      border-radius: 12px;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      text-align: center;
+      width: 100%;
+      max-width: 400px;
+      margin: 20px auto;
     }
   </style>
 </head>
@@ -147,7 +155,7 @@
     </p>
       <img src="../img/abeille2.jpg" alt="Énigme" style="display:block; width:100%; max-width:600px; margin:20px auto; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
 
-       <iframe src="https://lockee.fr/o/09as9zdt?nobg&noft&top&light"></iframe>
+       <iframe src="https://lockee.fr/o/09as9zdt?nobg&noft&top&light" style="width:100%;" ></iframe>
    
   </div>
 
