--- a/v2025/suspects.html
+++ b/v2025/suspects.html
@@ -97,6 +97,23 @@
         max-width: 95%;
       }
     }
+    .btn {
+      display: inline-block;
+      padding: 18px 28px;
+      font-size: 3rem;
+      background-color: #4CAF50;
+      color: white;
+      text-decoration: none;
+      border: none;
+      border-radius: 12px;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      text-align: center;
+      width: 100%;
+      max-width: 400px;
+      margin: 20px auto;
+    }
+
   </style>
 </head>
 <body>
