--- a/v2025/index.html
+++ b/v2025/index.html
@@ -60,7 +60,7 @@
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 16px;
+            font-size: 3rem;
             margin: 10px 0;
             cursor: pointer;
             border-radius: 12px;
