--- a/v2025/suspect4.html
+++ b/v2025/suspect4.html
@@ -23,11 +23,19 @@
     }
     .btn {
       display: inline-block;
-      padding: 10px 20px;
-      background: #4CAF50;
+      padding: 18px 28px;
+      font-size: 3rem;
+      background-color: #4CAF50;
       color: white;
       text-decoration: none;
-      border-radius: 10px;
+      border: none;
+      border-radius: 12px;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      text-align: center;
+      width: 100%;
+      max-width: 400px;
+      margin: 20px auto;
     }
   </style>
 </head>
